@@ -3,17 +3,19 @@ Hash: SHA256
 
 AUX zts-fix.patch 1799 SHA256 0f840e81bdb0462fa6393a7300ebe8923153f3a7d75db63e8b48ef5dc6254b63 SHA512 470d00ef4e82d6e70224e117beedf44e1319adea894b01a2f04cbab49f1a0d6e53bfeb57aeb8baefe84f96f7efdf2d6ad8c76091b56a6ec3f01ec9fe836a8db0 WHIRLPOOL 820d2e242efd6b436d4c8f0fc7a6b5ddf36fdfb630ea1e6cfe68a213cb508788782ac6e07fa590438d506f6a39cb81594e1469cdaf9bf2e38ac42c9240cc245f
 DIST igbinary-1.1.1.tar.gz 37486 SHA256 0060591c273e0ce41731ddd81f0a8f96d37d95166153e4e1f233680a0ce0ef59 SHA512 46d08f52e147aaa58faafa83eb2848e3505baba14711cb9682a4ab8a565c63b48597417211c00fe78629d258444fa78cb63cf9a20e0e7cfbab171ddf61d1c729 WHIRLPOOL 777bc83a4f5725a6365f94baf5ce8e2133ffaeb1d6202e118f15fe444bed1af8f2c7748686ad5d2e5782cc1adf30e6bd4414b4a8f887da1f8b2f5b8b3516a0f8
+DIST igbinary-1.2.1.tar.gz 143092 SHA256 f71a2e085669ed915740b29f55b6a81e30bae52215d041938afb9212e6bafc27 SHA512 5e69831606cfe47db2ae2b2200bd8bcfce42db32599a2a58cf23238d88896a2ef79baf16e78b3aaefb8725f8fdd7b815470e2d314ba14ea05f33be547da31777 WHIRLPOOL f7eb5d28b536bd1d2b0565f3e8541cbdb39edd2f5130bd041f0d75cc8218edeaa8719ebaea4d8ddf372172df9863d9d72a12dd8fc09c3653418b49e26d0e2f61
 EBUILD igbinary-1.1.1-r2.ebuild 1048 SHA256 213474b114ed345c1636c91c89f71e7e9bbe329676fd5e4bd0f0808007910b80 SHA512 0ab86e29c786c457dfe3c9b7155878f492458ef17d3753ad1ddfcaf740efc293d9436f4b9c2647ff14804e71bb49750b804748dafd79aa0e88cccd4d42a2218e WHIRLPOOL 312aa3fb5073469882ccb0f8ca415628f3a2c61f1297c0c4f14188652c8724f7c89c3b496249c55fe20c409e457960196fd94a6aa79a9d857772bd0bcd112710
-MISC ChangeLog 1418 SHA256 b76096b6c2d8a14c1d39602248979a4a6e6a19a6aa5d8fedcf79162d81a9d264 SHA512 87f6733f984ca3c58b6bd5ac11d00e121355bf4622a068c2ff975aff282f3d59d403eb47357e3754010e430b9dbe5b39ca151302111fca65ceec2d64062f55fe WHIRLPOOL cbb3e27867ca120f46a48192c403ea896cd5f341dfe273c2dd766cf1fe5d3ba3f3718553affed5f80849df6ba82f5ff2139f8f00f0e767ee7ab7f00bc31d90fc
+EBUILD igbinary-1.2.1.ebuild 915 SHA256 22d7a15dee3c02d9cdebb6d81302e97b2ed698da79fb8c4c29eb36739b4662bd SHA512 cc41c7c6b8c4bbe9096afde4df2b9870ca1e37991c4c9a0c618497b0bf700973a6edec3f35f30e02683959e7ba2ce851ee61228457765091707852342c3b7216 WHIRLPOOL e4e9f0c594e7b64c00d6d3e5a0ad34ee11ee0158eca74d4ecbaa1f5a76191290e1ce8e7864aeee300abd7742eefac6f76a2312399acec4c04c3f6ce6a75f34c3
+MISC ChangeLog 1584 SHA256 a6babddd55abf4ce7ed6e6ce8ab30fef32d36da5c364e8c3fabf0c2d43d27818 SHA512 a1cfaac87f7a5352562b9bca22618d9214b0e6704e4993dd5c904c5c0e8bc739493cf690f9f827bd4eac997cff464a28644a6616ff3b17ccef48cf915e7a8568 WHIRLPOOL a6ef47c2a5aa3d3fd001a6b63847a46f3ba708a72bc0bee337ca10434b14c3c8b1284ba58d595a9f1f3f06193a5a1d1f5efdfbaf7d48a322f892c6438e1c7e22
 MISC metadata.xml 156 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba SHA512 c15813e9ecae01488222d09140617eaf0e6e9b9b9d40412e1cda7838e64c8fb8c73c030dc90d723aea571acadddb76941c9a620fc4e554ba052ace1cc6b0ef79 WHIRLPOOL 1b1513674a388e3e95e09cfd70996bc98fc058ca0e0e7c5dc63e0b3389bedeb4dc16b55245b92a8ded7390cca0dc481e418f236a236ded9afcc2ef3845b25130
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUKsbQAAoJEE4V4vFnx44dwX8H/RGp6cEXRqG/3V+777SNhd9F
-XkLMVOh1SiHhVKXfSfAT2ftllsyE7mDrORzHCMQxVCzmZUAqWYq8+Jk/GZHe3gIt
-b5BZmjWmpiGkAQwEP2rQnDlo3hB4cJMU8tFQkDT+OAF6ee/h2DsOZ5tks0kGyYPe
-2yKoPtobnAvhI4+zCRvrx8TROse2Hd8clyXTwDDHez9xUr21t2iUuPIi+lAmTe+4
-tQhP6DJ5RdbMTXmtzdboxXkuFnyE1x8mCf2CYFp5uUVgBcTaV2E9XOWV5DLYbq8a
-GmmvuTc2R64Y/EB0nvB8XMJ9vVaDJzmctg6J43JjY151KS8vqY4a1JvbYFBMdRo=
-=h/Sz
+iQEcBAEBCAAGBQJUK3DYAAoJEE4V4vFnx44dtCoH/iArSb5c9euEdOJv/F07aN+K
++HpZESQEZPSpyKxQniv/2PJx2iytf2Ml4FuCKDC4IxdXb5jHXC471Zb9m4/G7k25
+VVboqAWu8Kd6E4hHrKFf1Fk+pY9KgoXymUNofSXzq/XMhv4cPMnpNOyC9IeJUaU5
+JwPRq9CXNov3T33x4lxww2dlwnhxKaLqU9op+jTL9zfNGkz9iX+flGMMfPRoHhPY
+Jikq75LvX2igEOXSWYwh+fXOwr5oNkarqfwmBjI5oa8bYhMaEY1i3gCVGcXSnQw4
+vo2tGtG/6n7YFbLYv+5GIpEteKcsr+FeoPg+C6r2cm5CZqs5BQG7R4amQfwgN90=
+=nNNS
 -----END PGP SIGNATURE-----
