@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=!<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool >=sys-devel/m4-1.4.3 >=sys-devel/libtool-1.5.18 php_targets_php5-6? ( dev-lang/php:5.6 ) php_targets_php5-5? ( dev-lang/php:5.5 ) php_targets_php5-4? ( dev-lang/php:5.4 )
+DESCRIPTION=A fast drop in replacement for the standard PHP serialize
+EAPI=5
+HOMEPAGE=https://github.com/igbinary/igbinary
+IUSE=php_targets_php5-6 php_targets_php5-5 php_targets_php5-4
+KEYWORDS=~amd64 ~x86
+LICENSE=BSD
+RDEPEND=php_targets_php5-6? ( dev-lang/php:5.6 ) php_targets_php5-5? ( dev-lang/php:5.5 ) php_targets_php5-4? ( dev-lang/php:5.4 )
+REQUIRED_USE=|| ( php_targets_php5-6 php_targets_php5-5 php_targets_php5-4 )
+SLOT=0
+SRC_URI=https://github.com/igbinary/igbinary/archive/1.2.1.tar.gz -> igbinary-1.2.1.tar.gz
+_eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	php-ext-source-r2	39437168059a2166e012420b3ba12815	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=65e1cec6f143ae41fefbb3f19d45b74c
